add initial ejs + css

--- a/views/user_page.ejs
+++ b/views/user_page.ejs
@@ -2,39 +2,37 @@
 <html lang="en">
   <head>
     <%- include('partials/_header') %>
-    <title>PasswordKeepR</title>
-
-    <!-- Required meta tags ---------------------------------------------------->
+    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS --------------------------------------------------------->
+    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <!-- CSS STYLES ------------------------------------------------------------>
     <link rel="stylesheet" href="../public/styles/header.css" type="text/css" />
-    <link rel="stylesheet" href="../public/styles/index.css" type="text/css" />
+    <link rel="stylesheet" href="../public/styles/user-page.css" type="text/css" />
 
-    <!-- JQUERY ---------------------------------------------------------------->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script type="text/javascript" src="../scripts/test.js"></script>
 
-    <script src="../express_server.js"></script>
-
+    <title>PasswordKeepR</title>
   </head>
-  <body>
-    <div class="about-section">
-   <h2>About</h2>
-   <p>This app will let an authorized user acess all the passwords of the organization. The app will also let a user generate a new password for a specific account (just like LastPass). Users will be able to generate a password based on the options the form will provide.</p>
-  </div>
-  <div class="homepage-button">
-    <a href="/user_page" ><button type="submit" class="btn btn-primary btn-1">Login</button></a>
-  </div>
-  <div class="homepage-button">
-    <a href="/register"><button type="submit" class="btn btn-primary btn-1">Register</button></a>
-  <footer></footer>
-  <body>
 
+  <body>
+    <h2>Websites</h2>
+  <div class="site-group">
+    <div class="website">
+      <span>Add/Edit/Delete Website</span>
+      <button type="submit" class="btn btn-primary">Submit</button>
+    </div>
+    <div class="website">
+      <span>Add/Edit/Delete Website</span>
+      <button type="submit" class="btn btn-primary">Submit</button>
+    </div>
+    <div class="website">
+      <span>Add/Edit/Delete Website</span>
+      <button type="submit" class="btn btn-primary">Submit</button>
+    </div>
+  </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
