refactor css routes

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,8 +12,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <!-- CSS STYLES ------------------------------------------------------------>
-    <link rel="stylesheet" href="../public/styles/header.css" type="text/css" />
-    <link rel="stylesheet" href="../public/styles/index.css" type="text/css" />
+    <link rel="stylesheet" href="../styles/header.css" type="text/css" />
+    <link rel="stylesheet" href="../styles/index.css" type="text/css" />
 
     <!-- JQUERY ---------------------------------------------------------------->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
