--- a/views/user_page.ejs
+++ b/views/user_page.ejs
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <!-- CSS STYLES ------------------------------------------------------------>
-    <link rel="stylesheet" href="../public/styles/header.css" type="text/css" />
-    <link rel="stylesheet" href="../public/styles/user-page.css" type="text/css" />
+    <link rel="stylesheet" href="../styles/header.css" type="text/css" />
+    <link rel="stylesheet" href="../styles/user-page.css" type="text/css" />
 
 
     <title>PasswordKeepR</title>
