add logout for current user

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,9 +1,9 @@
 <nav>
   <ul class="main-nav">
   <li class="nav-list"><a href="/" class="nav-home">PasswordKeepR</a></li>
-  <li class="nav-list"><a href="/user_page" class="nav-login">Login</a></li>
   <li class="nav-list"><a href="/register" class="nav-register">Register</a></li>
-      <li class="push"> <a href="" class="dropdown" data-toggle="dropdown">Catagories
+  <li class="push"><a href="/user_page" class="nav-login">Login</a></li>
+      <!-- <li class="push"> <a href="" class="dropdown" data-toggle="dropdown">Catagories
        <span class="caret"></span></a>
        <ul class="dropdown-menu">
          <li><a href="#">Favourites</a></li>
@@ -12,7 +12,7 @@
          <li><a href="#">Social</a></li>
          <li><a href="#">Work</a></li>
        </ul>
-       </li>
+       </li> -->
  </nav>
  <header>
    <h1>PasswordKeepR</h1>
