--- a/views/user_page.ejs
+++ b/views/user_page.ejs
@@ -1,7 +1,6 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <%- include('partials/_header') %>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -16,6 +15,24 @@
 
     <title>PasswordKeepR</title>
   </head>
+  <nav>
+    <ul class="main-nav">
+    <li class="nav-list"><a href="/" class="nav-home">PasswordKeepR</a></li>
+        <li class="nav-list"> <a href="" class="dropdown" data-toggle="dropdown">Catagories
+         <span class="caret"></span></a>
+         <ul class="dropdown-menu">
+           <li><a href="#">Favourites</a></li>
+           <li class="divider"></li>
+           <li><a href="#">Entertainment</a></li>
+           <li><a href="#">Social</a></li>
+           <li><a href="#">Work</a></li>
+         </ul>
+         </li>
+      <li class="push"><a href="/" class="nav-logout">Logout</a></li>
+   </nav>
+   <header>
+     <h1>PasswordKeepR</h1>
+   </header>
 
   <body>
     <h2>Websites</h2>
