--- a/views/new_site.ejs
+++ b/views/new_site.ejs
@@ -36,25 +36,22 @@
    </header>
 
   <body>
-    <h2>Websites</h2>
-  <div class="site-group">
-    <div class="website">
-      <span>Website1</span>
-      <button type="submit" class="btn btn-primary">Edit/Delete</button>
-    </div>
-    <div class="website">
-      <span>Website2</span>
-      <button type="submit" class="btn btn-primary">Edit/Delete</button>
-    </div>
-    <div class="website">
-      <span>Website3</span>
-      <button type="submit" class="btn btn-primary">Edit/Delete</button>
-    </div>
-  </div>
-  <div class="add-website">
-    <h2>Add New Website</h2>
-    <button type="submit" class="btn btn-primary add-btn"><a href="/create">Add</a></button>
-  </div>
+    <h2>New Website</h2>
+    <form method="POST" action="/create">
+      <div class="register-form">
+       <div class="register-block">
+     <label>website</label>
+     <input type="website" class="form-control" name="website" placeholder="Enter website">
+     </div>
+     <label>Username</label>
+     <input type="username" class="form-control" name="username" placeholder="Enter username">
+     </div>
+     <div class="register-block">
+     <label>Password</label>
+     <input type="password" class="form-control" name="password" placeholder="Enter password">
+     </div>
+     <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
