add selection for website category

--- a/views/new_site.ejs
+++ b/views/new_site.ejs
@@ -43,6 +43,14 @@
      <label>website</label>
      <input type="website" class="form-control" name="website" placeholder="Enter website">
      </div>
+     <li class="nav-list"> <a href="" class="dropdown" data-toggle="dropdown">Catagories
+      <span class="caret"></span></a>
+      <ul class="dropdown-menu">
+        <li><a href="#">Entertainment</a></li>
+        <li><a href="#">Social</a></li>
+        <li><a href="#">Work</a></li>
+      </ul>
+      </li>
      <label>Username</label>
      <input type="username" class="form-control" name="username" placeholder="Enter username">
      </div>
