--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -2,7 +2,7 @@
   <ul class="main-nav">
   <li class="nav-list"><a href="/" class="nav-home">PasswordKeepR</a></li>
   <li class="nav-list"><a href="/register" class="nav-register">Register</a></li>
-  <li class="push"><a href="/user_page" class="nav-login">Login</a></li>
+  <li class="push"><a href="/login" class="nav-login">Login</a></li>
       <!-- <li class="push"> <a href="" class="dropdown" data-toggle="dropdown">Catagories
        <span class="caret"></span></a>
        <ul class="dropdown-menu">
