--- a/views/user_page.ejs
+++ b/views/user_page.ejs
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <!-- CSS STYLES ------------------------------------------------------------>
-    <link rel="stylesheet" href="../styles/header.css" type="text/css" />
-    <link rel="stylesheet" href="../styles/user-page.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/header.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/user-page.css" type="text/css" />
 
     <title>PasswordKeepR</title>
   </head>
@@ -36,24 +36,33 @@
    </header>
 
   <body>
+    <!-- these are place holders and need to be replaced with the actual sites from the db -->
     <h2>Websites</h2>
   <div class="site-group">
     <div class="website">
       <span>Website1</span>
-      <button type="submit" class="btn btn-primary">Edit/Delete</button>
+      <form method="GET" action="/edit">
+        <button type="submit" class="btn btn-primary">Edit/Delete</button>
+        </form>
     </div>
     <div class="website">
       <span>Website2</span>
-      <button type="submit" class="btn btn-primary">Edit/Delete</button>
-    </div>
+      <form method="GET" action="/edit">
+        <button type="submit" class="btn btn-primary">Edit/Delete</button>
+        </form>
+      </div>
     <div class="website">
       <span>Website3</span>
-      <button type="submit" class="btn btn-primary">Edit/Delete</button>
-    </div>
+      <form method="GET" action="/edit">
+        <button type="submit" class="btn btn-primary">Edit/Delete</button>
+        </form>
+      </div>
   </div>
   <div class="add-website">
     <h2>Add New Website</h2>
-    <button type="submit" class="btn btn-primary add-btn"><a href="/create">Add</a></button>
+    <form method="GET" action="/create">
+      <button type="submit" class="btn btn-primary">Add</button>
+      </form>
   </div>
 
     <!-- Optional JavaScript -->
