--- a/views/new_site.ejs
+++ b/views/new_site.ejs
@@ -45,7 +45,7 @@
       <div class="register-form">
        <div class="register-block">
      <label>website</label>
-     <input type="website" class="form-control" name="website" placeholder="Enter website">
+     <input type="website" class="form-control" name="website" placeholder="Enter website" required>
      </div>
      <ul class="category-list">
       <select name="categoryList">
@@ -57,11 +57,11 @@
      <div class="user-info">
       <div class="register-block">
      <label>Username</label>
-     <input type="username" class="form-control" name="username" placeholder="Enter username">
+     <input type="username" class="form-control" name="username" placeholder="Enter username" required>
       </div>
       <div class="register-block">
      <label>Password</label>
-     <input type="password" class="form-control" name="password" placeholder="Enter password">
+     <input type="password" class="form-control" name="password" placeholder="Enter password" required>
 
       </div>
      <button type="submit" class="btn btn-primary">Submit</button>
