--- a/views/user_page.ejs
+++ b/views/user_page.ejs
@@ -42,7 +42,7 @@
     <div class="website">
       <% for(let favourite of favourites) { %>
       <span><%=favourite.name%></span>
-      <form method="GET" action="/edit">
+      <form method="GET" action="/edit/<%=favourite.id%>">
         <button type="submit" class="btn btn-primary">Edit</button>
       </form>
       <form method="POST" action="/delete"> <!-- route needs to be made to delete company from users table  -->
