Add routes to categorties

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -11,7 +11,7 @@
 
     <!-- CSS STYLES ------------------------------------------------------------>
     <link rel="stylesheet" href="/styles/header.css" type="text/css" />
-    <link rel="stylesheet" href="/styles/register.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/login.css" type="text/css" />
 
     <title>PasswordKeepR</title>
   </head>
