--- a/views/work_sites.ejs
+++ b/views/work_sites.ejs
@@ -1,8 +1,6 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -11,10 +9,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <!-- CSS STYLES ------------------------------------------------------------>
-    <link rel="stylesheet" href="/styles/new_site.css" type="text/css" />
     <link rel="stylesheet" href="/styles/header.css" type="text/css" />
-
-
+    <link rel="stylesheet" href="/styles/user-page.css" type="text/css" />
 
     <title>PasswordKeepR</title>
   </head>
@@ -40,39 +36,11 @@
    </header>
 
   <body>
-    <h2>New Website</h2>
-    <form method="POST" action="/create">
-      <div class="register-form">
-       <div class="register-block">
-     <label>Website</label>
-     <div class="website-selection">
-     <input type="website" class="form-control" name="website" placeholder="Enter website" required>
-     </div>
-     <ul class="category-list">
-      <select name="categoryList">
-        <option value="1">Entertainment</option>
-        <option value="2">Work</option>
-        <option value="3">Social</option>
-      </select>
-      </ul>
-    </div>
-     <div class="user-info">
-      <div class="register-block">
-     <label>Username</label>
-     <input type="username" class="form-control" name="username" placeholder="Enter username" required>
-      </div>
-      <div class="register-block">
-     <label>Password</label>
-     <input type="password" class="form-control" name="password" placeholder="Enter password" required>
+    <!-- these are place holders and need to be replaced with the actual sites from the db -->
+    <h2>Work</h2>
 
-      </div>
-     <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
-      </div>
-  </div>
 
     <!-- Optional JavaScript -->
-    <script type="text/javascript" src="/scripts/app.js"></script>
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
