--- a/views/edit_site.ejs
+++ b/views/edit_site.ejs
@@ -63,6 +63,7 @@
   </div>
 
      <label></label>
+     <form action="/edit/<%=company_id%>/password" method="post">
      <span>password</span>
      <div class="hide-password">
       <!-- use type password if we want password to still be hidden -->
@@ -70,6 +71,7 @@
     </div>
     <div class="password-btns">
      <button type="submit" class="btn btn-primary show-password">Edit</button>
+    </form>
      <button type="submit" class="btn btn-primary random-buttom">Generate Random</button>
     </div>
      <div class="edit-submit">
