add generate random password and JQuery to the edit page

--- a/views/edit_site.ejs
+++ b/views/edit_site.ejs
@@ -67,12 +67,12 @@
      <span>password</span>
      <div class="hide-password">
       <!-- use type password if we want password to still be hidden -->
-     <input type="text" name="password" value=<%=user_password%>>
+     <input type="text" name="password" class="password-field" value=<%=user_password%>>
     </div>
     <div class="password-btns">
      <button type="submit" class="btn btn-primary show-password">Edit</button>
     </form>
-     <button type="submit" class="btn btn-primary random-buttom">Generate Random</button>
+     <button type="submit" class="btn btn-primary random-button">Generate Random</button>
     </div>
      <div class="edit-submit">
      <button type="submit" class="btn btn-primary">Submit</button>
