--- a/views/edit_site.ejs
+++ b/views/edit_site.ejs
@@ -1,90 +1,98 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<head>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- CSS STYLES ------------------------------------------------------------>
-    <link rel="stylesheet" href="/styles/header.css" type="text/css" />
-    <link rel="stylesheet" href="/styles/edit_site.css" type="text/css" />
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <title>PasswordKeepR</title>
-  </head>
-  <nav>
-    <ul class="main-nav">
+  <!-- CSS STYLES ------------------------------------------------------------>
+  <link rel="stylesheet" href="/styles/header.css" type="text/css" />
+  <link rel="stylesheet" href="/styles/edit_site.css" type="text/css" />
+
+  <title>PasswordKeepR</title>
+</head>
+<nav>
+  <ul class="main-nav">
     <li class="nav-list"><a href="/user_page" class="nav-home">PasswordKeepR</a></li>
     <li class="nav-list"><a href="/user_page" class="nav-home">User Page</a></li>
-        <li class="nav-list"> <a href="" class="dropdown" data-toggle="dropdown">Categories
-         <span class="caret"></span></a>
-         <ul class="dropdown-menu">
-           <li><a href="/user_page">Favourites</a></li>
-           <li class="divider"></li>
-           <li><a href="/entertainment">Entertainment</a></li>
-           <li><a href="social">Social</a></li>
-           <li><a href="/work">Work</a></li>
-         </ul>
-         </li>
-      <form method="POST" action="/logout" class="push">
+    <li class="nav-list"> <a href="" class="dropdown" data-toggle="dropdown">Categories
+        <span class="caret"></span></a>
+      <ul class="dropdown-menu">
+        <li><a href="/user_page">Favourites</a></li>
+        <li class="divider"></li>
+        <li><a href="/entertainment">Entertainment</a></li>
+        <li><a href="social">Social</a></li>
+        <li><a href="/work">Work</a></li>
+      </ul>
+    </li>
+    <form method="POST" action="/logout" class="push">
       <button class="nav-logout">Logout</li>
-      </form>
-   </nav>
-   <header>
-     <h1>PasswordKeepR</h1>
-   </header>
+    </form>
+</nav>
+<header>
+  <h1>PasswordKeepR</h1>
+</header>
 
-  <body>
-    <h2><%=name%></h2>
-    <div class="site-user-info">
-    <h3><%=user_name%></h3>
-    <h3><%=hash_password%></h3>
-    </div>
+<body>
+  <h2>
+    <%=name%>
+  </h2>
+  <div class="site-user-info">
+    <h3>
+      <%=user_name%>
+    </h3>
+    <h3>
+      <%=hash_password%>
+    </h3>
+  </div>
 
-<!-- This needs a form POST method and /edit action -->
-<!-- buttons currently have no function to them -->
-      <div class="edit-form">
-     <form action="/edit/<%=company_id%>/username" method="post">
-    <div class="user-btns">
-      <div>
-      <span>Username</span>
-      </div>
-      <div class="hide-user">
-     <input type="email" name="email"
-     value=<%=user_name%>>
-    </div>
-     <button type="submit" class="btn btn-primary show-user">Edit</button>
-
+  <!-- This needs a form POST method and /edit action -->
+  <!-- buttons currently have no function to them -->
+  <div class="edit-form">
+    <form action="/edit/<%=company_id%>/username" method="post">
+      <div class="user-btns">
+        <div class="hide-user">
+          <span>Username</span>
+          <input type="email" name="email" value=<%=user_name%>>
+          <button type="submit" class="btn btn-primary show-user">Submit</button>
+        </div>
     </form>
   </div>
 
-     <label></label>
-     <form action="/edit/<%=company_id%>/password" method="post">
-     <span>password</span>
-     <div class="hide-password">
+  <label></label>
+  <div class="hide-password">
+    <form action="/edit/<%=company_id%>/password" method="post">
+      <span>password</span>
       <!-- use type password if we want password to still be hidden -->
-     <input type="text" name="password" class="password-field" value=<%=user_password%>>
-    </div>
-    <div class="password-btns">
-     <button type="submit" class="btn btn-primary show-password">Edit</button>
+      <input type="text" name="password" class="password-field" value=<%=user_password%>>
+      <button type="submit" class="btn btn-primary show-password">Submit</button>
     </form>
-     <button type="submit" class="btn btn-primary random-button">Generate Random</button>
-    </div>
-     <div class="edit-submit">
-     <button type="submit" class="btn btn-primary">Submit</button>
-     </div>
-    </div>
+    <button type="submit" class="btn btn-primary random-button">Generate Random</button>
+  </div>
+  <div class="edit-submit">
+    <button type="button" class="btn btn-primary edit">edit</button>
+  </div>
 
 
-    <!-- Optional JavaScript -->
-    <script type="text/javascript" src="/scripts/app.js"></script>
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  </body>
+  <!-- Optional JavaScript -->
+  <script type="text/javascript" src="/scripts/app.js"></script>
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
