--- a/views/user_page.ejs
+++ b/views/user_page.ejs
@@ -13,6 +13,7 @@
     <!-- CSS STYLES ------------------------------------------------------------>
     <link rel="stylesheet" href="/styles/header.css" type="text/css" />
     <link rel="stylesheet" href="/styles/user-page.css" type="text/css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 
     <title>PasswordKeepR</title>
   </head>
@@ -46,10 +47,10 @@
       <span class="website-name"><%=favourite.name%></span>
       <div class="site-group">
       <form method="GET" action="/edit/<%=favourite.id%>">
-        <button type="submit" class="btn btn-primary">Edit</button>
+        <button type="submit"><i class="bi bi-pencil"></i></button>
       </form>
       <form method="POST" action="/edit/<%=favourite.id%>/delete">
-        <button type="submit" class="btn btn-primary">Delete</button>
+        <button type="submit"><i class="bi bi-trash"></i></button>
       </div>
       </form>
     </div>
