--- a/views/user_page.ejs
+++ b/views/user_page.ejs
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <%- include('partials/_header') %>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
     <!-- Required meta tags -->
@@ -16,29 +17,17 @@
 
     <title>PasswordKeepR</title>
   </head>
-  <nav>
-    <ul class="main-nav">
-    <li class="nav-list"><a href="/user_page" class="nav-home">PasswordKeepR</a></li>
-        <li class="nav-list"> <a href="" class="dropdown" data-toggle="dropdown">Catagories
-         <span class="caret"></span></a>
-         <ul class="dropdown-menu">
-           <li><a href="/user_page">Favourites</a></li>
-           <li class="divider"></li>
-           <li><a href="/entertainment">Entertainment</a></li>
-           <li><a href="social">Social</a></li>
-           <li><a href="/work">Work</a></li>
-         </ul>
-         </li>
-      <form method="POST" action="/logout" class="push">
-      <button class="nav-logout">Logout</li>
-      </form>
-   </nav>
-   <header>
-     <h1>PasswordKeepR</h1>
-   </header>
 
   <body>
+    <%- include('partials/_categories') %>
     <!-- these are place holders and need to be replaced with the actual sites from the db -->
+    <div class="add-website">
+      <h2>Add New Website</h2>
+      <form method="GET" action="/create">
+        <button type="submit" class="btn btn-primary">Add</button>
+        </form>
+    </div>
+
     <h2>Favourites</h2>
     <div class="website-container">
       <% for(let favourite of favourites) { %>
@@ -56,12 +45,7 @@
         <% } %>
       </div>
 
-  <div class="add-website">
-    <h2>Add New Website</h2>
-    <form method="GET" action="/create">
-      <button type="submit" class="btn btn-primary">Add</button>
-      </form>
-  </div>
+
 
     <!-- Optional JavaScript -->
     <script type="text/javascript" src="/scripts/app.js"></script>
