--- a/views/entertainment_sites.ejs
+++ b/views/entertainment_sites.ejs
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <%- include('partials/_header') %>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -14,28 +15,9 @@
 
     <title>PasswordKeepR</title>
   </head>
-  <nav>
-    <ul class="main-nav">
-    <li class="nav-list"><a href="/user_page" class="nav-home">PasswordKeepR</a></li>
-        <li class="nav-list"> <a href="" class="dropdown" data-toggle="dropdown">Catagories
-         <span class="caret"></span></a>
-         <ul class="dropdown-menu">
-           <li><a href="/user_page">Favourites</a></li>
-           <li class="divider"></li>
-           <li><a href="/entertainment">Entertainment</a></li>
-           <li><a href="social">Social</a></li>
-           <li><a href="/work">Work</a></li>
-         </ul>
-         </li>
-      <form method="POST" action="/logout" class="push">
-      <button class="nav-logout">Logout</li>
-      </form>
-   </nav>
-   <header>
-     <h1>PasswordKeepR</h1>
-   </header>
 
   <body>
+    <%- include('partials/_categories') %>
     <!-- these are place holders and need to be replaced with the actual sites from the db -->
     <h2>Entertainment</h2>
 
