--- a/views/new_site.ejs
+++ b/views/new_site.ejs
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <%- include('partials/_header') %>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
     <!-- Required meta tags -->
@@ -13,31 +14,8 @@
     <!-- CSS STYLES ------------------------------------------------------------>
     <link rel="stylesheet" href="/styles/new_site.css" type="text/css" />
     <link rel="stylesheet" href="/styles/header.css" type="text/css" />
-
-
-
     <title>PasswordKeepR</title>
   </head>
-  <nav>
-    <ul class="main-nav">
-    <li class="nav-list"><a href="/user_page" class="nav-home">PasswordKeepR</a></li>
-        <li class="nav-list"> <a href="" class="dropdown" data-toggle="dropdown">Catagories
-         <span class="caret"></span></a>
-         <ul class="dropdown-menu">
-           <li><a href="/user_page">Favourites</a></li>
-           <li class="divider"></li>
-           <li><a href="/entertainment">Entertainment</a></li>
-           <li><a href="social">Social</a></li>
-           <li><a href="/work">Work</a></li>
-         </ul>
-         </li>
-      <form method="POST" action="/logout" class="push">
-      <button class="nav-logout">Logout</li>
-      </form>
-   </nav>
-   <header>
-     <h1>PasswordKeepR</h1>
-   </header>
 
   <body>
     <h2>New Website</h2>
