add generate random to new website

--- a/views/new_site.ejs
+++ b/views/new_site.ejs
@@ -41,11 +41,11 @@
       </div>
       <div class="register-block">
      <label>Password</label>
-     <input type="password" class="form-control" name="password" placeholder="Enter password" required>
-
+     <input type="password" name="password" class="form-control password-field" placeholder="Enter password" value="" required>
       </div>
      <button type="submit" class="btn btn-primary">Submit</button>
     </form>
+    <button type="submit" class="random-button">Generate Random</button>
       </div>
   </div>
 
