--- a/views/edit_site.ejs
+++ b/views/edit_site.ejs
@@ -3,21 +3,21 @@
 
 <head>
   <%- include('partials/_header') %>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-  <!-- CSS STYLES ------------------------------------------------------------>
-  <link rel="stylesheet" href="/styles/header.css" type="text/css" />
-  <link rel="stylesheet" href="/styles/edit_site.css" type="text/css" />
+    <!-- CSS STYLES ------------------------------------------------------------>
+    <link rel="stylesheet" href="/styles/header.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/edit_site.css" type="text/css" />
 
-  <title>PasswordKeepR</title>
+    <title>PasswordKeepR</title>
 </head>
 
 <body>
@@ -51,15 +51,16 @@
     <form action="/edit/<%=company_id%>/password" method="post">
       <span>password</span>
       <!-- use type password if we want password to still be hidden -->
-      <input type="text" name="password" class="password-field" value=<%=user_password%>>
+      <input type="text" name="password" id="copy-text" class="password-field" value=<%=user_password%>>
       <button type="submit" class="btn btn-primary show-password">Submit</button>
     </form>
     <button type="submit" class="btn btn-primary random-button">Generate Random</button>
   </div>
   <div class="edit-submit">
     <button type="button" class="btn btn-primary edit">edit</button>
-  </div>
+    <button type="button" id="copy">copy</button>
 
+  </div>
 
   <!-- Optional JavaScript -->
   <script type="text/javascript" src="/scripts/app.js"></script>
