--- a/views/user_page.ejs
+++ b/views/user_page.ejs
@@ -27,13 +27,16 @@
       <form method="GET" action="/create">
         <button type="submit" class="btn btn-primary">Add</button>
         </form>
-    </div>
+      </div>
+
+
 
     <h2>Favourites</h2>
     <div class="website-container">
       <% for(let favourite of favourites) { %>
         <div class="website-content">
-      <span class="website-name"><%=favourite.name%></span>
+      <span class="website-name" id="copy-text"><%=favourite.name%></span>
+      <!-- <button id="copy">copy</button> -->
       <div class="site-group">
       <form method="GET" action="/edit/<%=favourite.id%>">
         <button type="submit"><i class="bi bi-pencil"></i></button>
