made random password generator to show password

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -21,7 +21,7 @@
      <div class="login-form">
       <div class="login-block">
     <label>Username</label>
-    <input type="username" class="form-control" name="email" placeholder="Enter username">
+    <input type="email" class="form-control" name="email" placeholder="Enter username">
     </div>
     <div class="login-block">
     <label>Password</label>
