--- a/views/new_site.ejs
+++ b/views/new_site.ejs
@@ -41,7 +41,7 @@
       </div>
       <div class="register-block">
      <label>Password</label>
-     <input type="password" name="password" class="form-control password-field" placeholder="Enter password" value="" required>
+     <input type="text" name="password" class="form-control password-field" placeholder="Enter password" value="" required>
       </div>
      <button type="submit" class="btn btn-primary">Submit</button>
     </form>
