--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,7 +1,7 @@
 <nav>
   <ul class="main-nav">
-    <li class="nav-list"><a href="/user_page" class="nav-home">PasswordKeepR</a></li>
-    <li class="nav-list"><a href="/user_page" class="nav-home">User Page</a></li>
+    <li class="nav-list"><a href="/user_page" class="nav-home">My Pages</a></li>
+    <li class="nav-list"><a href="/create" class="nav-home">Add Website</a></li>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup" style="float:right"></div>
     <% if (userID) {%>
       <form method="POST" action="/logout" class="push">
