--- a/views/register.ejs
+++ b/views/register.ejs
@@ -21,7 +21,7 @@
      <div class="register-form">
       <div class="register-block">
     <label>Username</label>
-    <input type="username" class="form-control" name="email" placeholder="Enter username">
+    <input type="email" class="form-control" name="email" placeholder="Enter username">
     </div>
     <div class="register-block">
     <label>Password</label>
