--- a/views/new_site.ejs
+++ b/views/new_site.ejs
@@ -24,7 +24,7 @@
        <div class="register-block">
      <label>Website</label>
      <div class="website-selection">
-     <input type="website" class="form-control" name="website" value="<%=website%>" placeholder="Enter website name" required>
+     <input type="url" class="form-control" name="website" value="<%=website%>" placeholder="Enter website name" required>
      </div>
      <ul class="category-list">
       <select name="categoryList">
@@ -37,7 +37,7 @@
      <div class="user-info">
       <div class="register-block">
      <label>Username</label>
-     <input type="username" class="form-control" name="username" placeholder="Enter username" required>
+     <input type="email" class="form-control" name="username" placeholder="Enter email" required>
       </div>
       <div class="register-block">
      <label>Password</label>
