--- a/views/edit_site.ejs
+++ b/views/edit_site.ejs
@@ -20,6 +20,10 @@
     <title>PasswordKeepR</title>
 </head>
 
+<header>
+  <h1>Edit</h1>
+</header>
+
 <body>
   <h2>
     <%=name%>
@@ -58,7 +62,7 @@
   </div>
   <div class="edit-submit">
     <button type="button" class="btn btn-primary edit">edit</button>
-    <button type="button" id="copy">copy</button>
+
 
   </div>
 
