--- a/views/login.ejs
+++ b/views/login.ejs
@@ -15,13 +15,18 @@
 
     <title>PasswordKeepR</title>
   </head>
+
+  <header>
+    <h1>PasswordKeepR</h1>
+  </header>
+
   <body>
     <h2>Login</h2>
     <form method="POST" action="/login">
      <div class="login-form">
       <div class="login-block">
     <label>Username</label>
-    <input type="email" class="form-control" name="email" placeholder="Enter username">
+    <input type="email" class="form-control" name="email" placeholder="Enter email">
     </div>
     <div class="login-block">
     <label>Password</label>
