--- a/views/new_site.ejs
+++ b/views/new_site.ejs
@@ -17,8 +17,12 @@
     <title>PasswordKeepR</title>
   </head>
 
+  <header>
+    <h1>Add New Website</h1>
+  </header>
+
+
   <body>
-    <h2>New Website</h2>
     <form method="POST" action="/create">
       <div class="register-form">
        <div class="register-block">
