--- a/views/entertainment_sites.ejs
+++ b/views/entertainment_sites.ejs
@@ -10,16 +10,20 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <!-- CSS STYLES ------------------------------------------------------------>
+    <link rel="stylesheet" href="/styles/categories.css" type="text/css" />
     <link rel="stylesheet" href="/styles/header.css" type="text/css" />
-    <link rel="stylesheet" href="/styles/user-page.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/category_pages.css" type="text/css" />
 
     <title>PasswordKeepR</title>
   </head>
 
+  <header>
+    <h1>Entertainment</h1>
+  </header>
+
   <body>
     <%- include('partials/_categories') %>
     <!-- these are place holders and need to be replaced with the actual sites from the db -->
-    <h2>Entertainment Websites</h2>
     <!-- <h2>Favourites</h2> -->
     <div class="website-container">
       <% for(let favourite of favourites) { %>
@@ -28,8 +32,10 @@
       <div class="site-group">
       <form method="GET" action="/create">
         <input type="hidden" name="website" value="<%=favourite.name%>">
-        <button type="submit" class="btn btn-primary">Favourite</button>
+        <button type="submit"><i class="bi bi-pencil"></i></button>
+
       </form>
+
       <!-- <form method="POST" action="/edit/<%=favourite.id%>/delete">
         <button type="submit" class="btn btn-primary">Delete</button> -->
       </div>
