--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,6 +22,11 @@
     <script src="../express_server.js"></script>
 
   </head>
+
+  <header>
+    <h1>PasswordKeepR</h1>
+  </header>
+
   <body>
     <div class="about-section">
    <h2>About</h2>
