--- a/views/partials/_categories.ejs
+++ b/views/partials/_categories.ejs
@@ -1,10 +1,13 @@
-<li class="nav-list"> <a href="" class="dropdown" data-toggle="dropdown">Categories
-  <span class="caret"></span></a>
-<ul class="dropdown-menu">
-  <li><a href="/user_page">Favourites</a></li>
-  <li class="divider"></li>
-  <li><a href="/entertainment">Entertainment</a></li>
-  <li><a href="social">Social</a></li>
-  <li><a href="/work">Work</a></li>
-</ul>
-</li>
+<div class="btn-group">
+  <button type="button" class="btn dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    categories
+  </button>
+  <div class="dropdown-menu">
+    <a class="dropdown-item" href="/user_page">Favourites</a>
+    <div class="dropdown-divider"></div>
+    <a class="dropdown-item" href="/entertainment">Entertainment</a>
+    <a class="dropdown-item" href="social">Social</a>
+    <a class="dropdown-item" href="/work">Work</a>
+    <div class="dropdown-divider"></div>
+  </div>
+</div>
