--- a/views/social_sites.ejs
+++ b/views/social_sites.ejs
@@ -10,14 +10,19 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <!-- CSS STYLES ------------------------------------------------------------>
+    <link rel="stylesheet" href="/styles/categories.css" type="text/css" />
     <link rel="stylesheet" href="/styles/header.css" type="text/css" />
-    <link rel="stylesheet" href="/styles/user-page.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/category_pages.css" type="text/css" />
 
     <title>PasswordKeepR</title>
+
+    <header>
+      <h1>Social</h1>
+    </header>
+
   <body>
     <%- include('partials/_categories') %>
     <!-- these are place holders and need to be replaced with the actual sites from the db -->
-    <h2>Social Websites</h2>
     <div class="website-container">
       <% for(let favourite of favourites) { %>
         <div class="website-content">
