--- a/views/user_page.ejs
+++ b/views/user_page.ejs
@@ -1,7 +1,8 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <%- include('partials/_header') %>
+
+<head>
+  <%- include('partials/_header') %>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
     <!-- Required meta tags -->
@@ -9,56 +10,72 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <!-- CSS STYLES ------------------------------------------------------------>
+    <link rel="stylesheet" href="/styles/categories.css" type="text/css" />
     <link rel="stylesheet" href="/styles/header.css" type="text/css" />
     <link rel="stylesheet" href="/styles/user-page.css" type="text/css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 
     <title>PasswordKeepR</title>
-  </head>
+</head>
 
-  <body>
+<header>
+  <h1>Favourites</h1>
+</header>
+
+<body>
+  <div class="top-row">
     <%- include('partials/_categories') %>
-    <!-- these are place holders and need to be replaced with the actual sites from the db -->
-    <div class="add-website">
-      <h2>Add New Website</h2>
-      <form method="GET" action="/create">
-        <button type="submit" class="btn btn-primary">Add</button>
+      <div class="add-website">
+        <form method="GET" action="/create">
+          <button type="submit" class="btn">Add New Website</button>
         </form>
+
       </div>
+  </div>
 
-
-
-    <h2>Favourites</h2>
-    <div class="website-container">
-      <% for(let favourite of favourites) { %>
-        <div class="website-content">
-      <span class="website-name"><%=favourite.name%></span>
-      <span class="hiddenPassword"><span class="copy-text password" style='display:none'><%=favourite.company_password%></span>*******</span>
-      <button class="copy"><i class="bi bi-clipboard-check"></i></button>
-      <!-- <div class="site-group"> -->
-        <!-- <button><i class="bi bi-clipboard-check copy"></i></button> -->
-      <form method="GET" action="/edit/<%=favourite.id%>">
-        <button type="submit"><i class="bi bi-pencil"></i></button>
-      </form>
-      <form method="POST" action="/edit/<%=favourite.id%>/delete">
-        <button type="submit"><i class="bi bi-trash"></i></button>
-      <!-- </div> -->
-      </form>
-
-    </div>
-        <% } %>
+  <div class="website-container">
+    <% for(let favourite of favourites) { %>
+      <div class="website-content">
+        <span class="website-name">
+          <%=favourite.name%>
+        </span>
+        <span class="hiddenPassword"><span class="copy-text password" style='display:none'>
+            <%=favourite.company_password%>
+          </span>*******</span>
+        <div class="user-buttons">
+          <button class="copy"><i class="bi bi-clipboard-check"></i></button>
+          <!-- <div class="site-group"> -->
+          <!-- <button><i class="bi bi-clipboard-check copy"></i></button> -->
+          <form method="GET" action="/edit/<%=favourite.id%>">
+            <button type="submit"><i class="bi bi-pencil"></i></button>
+          </form>
+          <form method="POST" action="/edit/<%=favourite.id%>/delete">
+            <button type="submit"><i class="bi bi-trash"></i></button>
+            <!-- </div> -->
+          </form>
+        </div>
       </div>
+      <% } %>
+  </div>
 
 
 
-    <!-- Optional JavaScript -->
-    <script type="text/javascript" src="/scripts/app.js"></script>
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  </body>
+  <!-- Optional JavaScript -->
+  <script type="text/javascript" src="/scripts/app.js"></script>
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
+    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
+    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
