add favourite symbol on categories page

--- a/views/entertainment_sites.ejs
+++ b/views/entertainment_sites.ejs
@@ -28,7 +28,7 @@
       <div class="site-group">
       <form method="GET" action="/create">
         <input type="hidden" name="website" value="<%=favourite.name%>">
-        <button type="submit" class="btn btn-primary">Favourite</button>
+        <button type="submit"><i class="bi bi-heart-fill"></i></button>
       </form>
       <!-- <form method="POST" action="/edit/<%=favourite.id%>/delete">
         <button type="submit" class="btn btn-primary">Delete</button> -->
