--- a/views/entertainment_sites.ejs
+++ b/views/entertainment_sites.ejs
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="/styles/categories.css" type="text/css" />
     <link rel="stylesheet" href="/styles/header.css" type="text/css" />
     <link rel="stylesheet" href="/styles/category_pages.css" type="text/css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 
     <title>PasswordKeepR</title>
   </head>
