add favourite icon on work and social

--- a/views/entertainment_sites.ejs
+++ b/views/entertainment_sites.ejs
@@ -33,7 +33,7 @@
       <div class="site-group">
       <form method="GET" action="/create">
         <input type="hidden" name="website" value="<%=favourite.name%>">
-        <button type="submit"><i class="bi bi-heart-fill"></i></button>
+        <button type="submit"><i class="bi bi-star-fill"></i></button>
       </form>
 
       <!-- <form method="POST" action="/edit/<%=favourite.id%>/delete">
