--- a/views/social_sites.ejs
+++ b/views/social_sites.ejs
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="/styles/categories.css" type="text/css" />
     <link rel="stylesheet" href="/styles/header.css" type="text/css" />
     <link rel="stylesheet" href="/styles/category_pages.css" type="text/css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
 
     <title>PasswordKeepR</title>
 
@@ -29,7 +30,7 @@
       <span class="website-name"><%=favourite.name%></span>
       <div class="site-group">
       <form method="GET" action="/create">
-        <button type="submit" class="btn btn-primary">Favourite</button>
+        <button type="submit"><i class="bi bi-star-fill"></button>
       </form>
       <!-- <form method="POST" action="/edit/<%=favourite.id%>/delete">
         <button type="submit" class="btn btn-primary">Delete</button> -->
